--- a/templates/coach.html
+++ b/templates/coach.html
@@ -2,7 +2,7 @@
 
 <html>
   <style>
-    body{ 
+    body{
       font-size: 15pt;
       font-family: arial;
     }
@@ -10,7 +10,9 @@
 
 
   <body>
-    <h1>Add a Coach</h1>
+    <h1>Coaches</h1>
+
+    {% if isDBA %}
 
       <form method="POST" action="/coach">
         id: <input type="text" name="coach_id" maxlength="5"> <br>
@@ -22,6 +24,9 @@
         Number of Losses: <input type="number" name="c_losses"> <br>
         <input type="submit" value="Add">
       </form>
+
+    {% endif %}
+
     <br>
     <div>
       {{ table|safe }}
