--- a/templates/game.html
+++ b/templates/game.html
@@ -8,7 +8,7 @@
   </style>
 
   <body>
-    <h1>game</h1>
+    <h1>Games</h1>
     <div>{{data}}</div>
 
     <div>
@@ -17,6 +17,7 @@
     {% endfor %}
     </div>
 
+    {% if isDBA %}
     <form method="POST" action="/add">
         <p>
 
@@ -31,6 +32,7 @@
 
         <input type="submit" value="Add"></p>
     </form>
+    {% endif %}
 
   </body>
 
