--- a/templates/team.html
+++ b/templates/team.html
@@ -8,7 +8,7 @@
   </style>
 
   <body>
-    <h1>team</h1>
+    <h1>Teams</h1>
     <div>{{data}}</div>
 
     <div>
@@ -17,6 +17,7 @@
     {% endfor %}
     </div>
 
+    {% if isDBA %}
     <form method="POST" action="/add">
         <p>
 
@@ -30,6 +31,7 @@
 
         <input type="submit" value="Add"></p>
     </form>
+    {% endif %}
 
   </body>
 
