--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,11 @@
 
     <h1>Manage and View</h1>
 
+    {% if isDBA %}
     <div>
-      <span style="float:right"><a href="home.html">Sign Out</a></span><br/>
+      <span style="float:right"><a href="signin.html">Sign Out</a></span><br/>
     </div>
+    {% endif %}
 
     <a href="coach.html">Coaches</a><br>
     <a href="court.html">Courts</a><br>
