--- a/templates/plays_in.html
+++ b/templates/plays_in.html
@@ -9,13 +9,12 @@
 
   <body>
     <h1>Player Game Performances</h1>
-    <div>{{data}}</div>
 
+    {% if isDBA %}
     <div>
-    {% for n in data %}
-    <div>{{n}}</div>
-    {% endfor %}
+      <span style="float:right"><a href="signin.html">Sign Out</a></span><br/>
     </div>
+    {% endif %}
 
     {% if isDBA %}
     <form method="POST" action="/add">
@@ -39,6 +38,11 @@
     </form>
     {% endif %}
 
+    <br>
+    <div>
+      {{ table|safe }}
+    </div>
+    
   </body>
 
 </html>
