--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,8 +10,8 @@
   <body>
     <h1>Basketball Database</h1>
 
-    <a href="signin-page.html">I am a Database Administrator (DBA).</a> <br>
-    <a href="signin-page.html">I am a User.</a>
+    <a href="index.html">I am a Database Administrator (DBA).</a> <br>
+    <a href="index.html">I am a User.</a>
 
   </body>
 
