Removed .html tags on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,13 @@
     </div>
     {% endif %}
 
-    <a href="coach.html">Coaches</a><br>
-    <a href="court.html">Courts</a><br>
-    <a href="game.html">Games</a><br>
-    <a href="player.html">Players</a><br>
-    <a href="plays_in.html">Player Game Performance</a><br>
-    <a href="referee.html">Referees</a><br>
-    <a href="team.html">Teams</a><br>
+    <a href="coach">Coaches</a><br>
+    <a href="court">Courts</a><br>
+    <a href="game">Games</a><br>
+    <a href="player">Players</a><br>
+    <a href="plays_in">Player Game Performance</a><br>
+    <a href="referee">Referees</a><br>
+    <a href="team">Teams</a><br>
 
     {% if isDBA %}
     <a href="dba.html">Database Administrators</a>
