--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
     {% if isDBA %}
     <div>
-      <span style="float:right"><a href="signin">Sign Out</a></span><br/>
+      <span style="float:right"><a href="signout">Sign Out</a></span><br/>
     </div>
     {% endif %}
 
@@ -26,7 +26,7 @@
     <a href="team">Teams</a><br>
 
     {% if isDBA %}
-    <a href="dba.html">Database Administrators</a>
+    <a href="dba">Database Administrators</a>
     {% endif %}
 
   </body>
