--- a/templates/coach.html
+++ b/templates/coach.html
@@ -14,7 +14,7 @@
 
     {% if isDBA %}
     <div>
-      <span style="float:right"><a href="signin">Sign Out</a></span><br/>
+      <span style="float:right"><a href="signout">Sign Out</a></span><br/>
     </div>
     {% endif %}
 
