--- a/templates/court.html
+++ b/templates/court.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
 <html>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   <style>
     body{
@@ -8,15 +18,21 @@
   </style>
 
   <body>
+  <h1><strong>NBA Database Project</strong></h1>
     <h1>Courts</h1>
 
     {% if isDBA %}
     <div>
+      <span style="float:right">Signed in as Database Administrator.</span><br>
       <span style="float:right"><a href="signout">Sign Out</a></span><br/>
     </div>
     {% endif %}
 
     {% if isDBA %}
+        <div class="container" style="border:2px solid #4259f4">
+      <h3 style="color:#4259f4"><strong>Add a Court</strong></h3>
+      <h4 style="color:#4259f4"> DBA-access only </h4>
+      <br>
     <form method="POST" action="/add">
         <p>
           court_id: <input type="text" name="court_id" maxlength="5"> <br>
@@ -25,6 +41,7 @@
           zipcode: <input type="number" name="zipcode"> <br>
         <input type="submit" value="Add"></p>
     </form>
+    </div>
     {% endif %}
 
     <br>
