--- a/templates/dba.html
+++ b/templates/dba.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
 <html>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   <style>
     body{
@@ -8,10 +18,12 @@
   </style>
 
   <body>
+  <h1><strong>NBA Database Project</strong></h1>
     <h1>Database Administrators</h1>
 
     {% if isDBA %}
     <div>
+      <span style="float:right">Signed in as Database Administrator.</span><br>
       <span style="float:right"><a href="signout">Sign Out</a></span><br/>
     </div>
     {% endif %}
@@ -22,7 +34,7 @@
           dba_id: <input type="text" name="dba_id" maxlength="5"> <br>
           fname: <input type="text" name="fname" maxlength="80"> <br>
           lname: <input type="text" name="lname" maxlength="80"> <br>
-          email: <input type="text" name="email" maxlength="80"> <br>
+          email: <input type="text" name="email" maxlength="80"> <br>
           dob: <input type="date" class="form-control" name="dob" placeholder="MM/DD/YYYY"/> <br>
           sex: <input type="radio" name="sex" value="0">Male<br>  <input type="radio" name="sex" value="1">Female<br>
 
@@ -30,7 +42,7 @@
     </form>
 
     {% if isDBA %}
-    <h1 style='color: red'>DBA Debug: table dba</h1>
+    <h1 style='color: red'>DBA Debug: table dba</h1>
     <br>
     <div>
       {{ table|safe }}
