--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
 <html>
+  
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
 
   <style>
     body{
@@ -8,11 +18,14 @@
   </style>
 
   <body>
-    <h1>Basketball Database</h1>
+  <div class='container'>
+    <h1><strong>NBA Database Project</strong></h1>
+    <br>
+    <h3>Sign in as:</h3>
 
-    <a href="/enable_dba">I am a Database Administrator (DBA).</a> <br>
-    <a href="/index">I am a User.</a>
-
+    <a href="/enable_dba">Database Administrator (DBA)</a> <br>
+    <a href="/index">Standard User</a>
+  </div>
   </body>
 
 </html>
