--- a/templates/plays_in.html
+++ b/templates/plays_in.html
@@ -17,6 +17,8 @@
     }
   </style>
 
+  <title>NBA Database Project - Player Game Performance</title>
+
   <body>
   <h1><strong>NBA Database Project</strong></h1>
     <h1>Player Game Performances</h1>
