--- a/templates/signin.html
+++ b/templates/signin.html
@@ -17,6 +17,8 @@
     }
   </style>
 
+  <title>NBA Database Project - Sign In</title>
+
   <body>
   <div class='container'>
     <h1><strong>NBA Database Project</strong></h1>
