--- a/templates/team.html
+++ b/templates/team.html
@@ -17,6 +17,8 @@
     }
   </style>
 
+  <title>NBA Database Project - Teams</title>
+
   <body>
   <h1><strong>NBA Database Project</strong></h1>
     <h1>Teams</h1>
