--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@
     }
   </style>
 
+  <title>NBA Database Project - Index</title>
+
   <body>
   <h1><strong>NBA Database Project</strong></h1>
 
@@ -37,8 +39,17 @@
     <a href="referee">Referees</a><br>
     <a href="team">Teams</a><br>
 
+    <br>
+    <a href="top-scoring-players">List of Top-Scoring Players in a Game</a><br>
+
     {% if isDBA %}
+    <br>
+        <div class="container-fluid" style="border:2px solid #4259f4">
+      <h3 style="color:#4259f4"><strong>DBA Management</strong></h3>
+      <h4 style="color:#4259f4"> DBA-access only </h4>
+    <br>
     <a href="dba">Database Administrators</a>
+    </div>
     {% endif %}
 
   </body>
