--- a/templates/court.html
+++ b/templates/court.html
@@ -39,7 +39,7 @@
       <h3 style="color:#4259f4"><strong>Add a Court</strong></h3>
       <h4 style="color:#4259f4"> DBA-access only </h4>
       <br>
-    <form method="POST" action="/add">
+    <form method="POST" action="/court">
         <p>
           court_id: <input type="text" name="court_id" maxlength="5"> <br>
           city: <input type="text" name="city" maxlength="80"> <br>
