--- a/templates/top-scoring-players.html
+++ b/templates/top-scoring-players.html
@@ -17,13 +17,13 @@
     }
   </style>
 
-    <title>NBA Database Project - Top Scoring Players in a Game </title>
+    <title>NBA Database Project - Top 5 Scoring Players in a Game </title>
 
   <body>
   <div class=container>
   <h1><strong>NBA Database Project</strong></h1>
     
-    <h1>Top-Scoring Players in a Game</h1>
+    <h1>Top 5 Scoring Players in a Game</h1>
 
     {% if isDBA %}
     <div>
