--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     <a href="team">Teams</a><br>
 
     <br>
-    <a href="top-scoring-players">List of Top-Scoring Players in a Game</a><br>
+    <a href="top-scoring-players">List of Top 5 Scoring Players in a Game</a><br>
 
     {% if isDBA %}
     <br>
