--- a/templates/dba.html
+++ b/templates/dba.html
@@ -35,6 +35,9 @@
 
     {% if isDBA %}
     <div class="container" style="border:2px solid #4259f4">
+      {% if invalidEntry %}
+      <h5 style="color:red">Invalid Entry. Please try again. </h5>
+      {% endif %}
       <h3 style="color:#4259f4"><strong>Add a DBA</strong></h3>
       <h4 style="color:#4259f4"> DBA-access only </h4>
       <br>
