--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,9 @@
 
     <br>
     <a href="top-scoring-players">List of Top 5 Scoring Players in a Game</a><br>
+    <a href='injuries-on-teams'>Number of Player Injuries per Team</a><br>
+    <a href='total-stats'>Total Statistics over Player Career</a><br>
+    <a href='avg-stats'>Average Statistics over Player Career</a><br>
 
     {% if isDBA %}
     <br>
