--- a/templates/referee.html
+++ b/templates/referee.html
@@ -45,7 +45,9 @@
 
     <br>
     <div>
-      {{ table|safe }}
+      {% for n in data %}
+      <div>{{n}}</div>
+      {% endfor %}
     </div>
 
   </body>
