--- a/templates/team.html
+++ b/templates/team.html
@@ -48,7 +48,9 @@
 
     <br>
     <div>
-      {{ table|safe }}
+      {% for n in data %}
+      <div>{{n}}</div>
+      {% endfor %}
     </div>
 
   </body>
