Fixed broken coaches page and deleted old html pages

--- a/templates/player.html
+++ b/templates/player.html
@@ -78,10 +78,7 @@
       <br>
       <br>
     {% endif %}
-
-
-
-    <h1 style='color:blue'>List of games:</h1>
+    <h1 style='color:blue'>List of Players:</h1>
     {% for n in data2%}
     <div>{{n}}</div>
     {% endfor %}
