--- a/templates/court.html
+++ b/templates/court.html
@@ -44,7 +44,7 @@
           court_id: <input type="text" name="court_id" maxlength="5"> <br>
           city: <input type="text" name="city" maxlength="80"> <br>
           state: <input type="text" name="state" maxlength="80"> <br>
-          zipcode: <input type="number" name="zipcode"> <br>
+          zipcode: <input type="number" name="zipcode" maxlength="5"> <br>
         <input type="submit" value="Add"></p>
     </form>
     <br>
