--- a/templates/top-scoring-players.html
+++ b/templates/top-scoring-players.html
@@ -22,7 +22,7 @@
   <body>
   <div class=container>
   <h1><strong>NBA Database Project</strong></h1>
-    
+
     <h1>Top 5 Scoring Players in a Game</h1>
 
     {% if isDBA %}
@@ -32,9 +32,12 @@
     </div>
     {% endif %}
 
-    <div class=container>
-      {{ table|safe }}
     </div>
+    <br>
+    <br>
+    {% for n in data %}
+    <div>{{n}}</div>
+    {% endfor %}
 
     </div>
   </body>
